--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -1,2 +1,2 @@
 backend_url =https://erikjbarra-3030.theiadockernext-1-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai
-sentiment_analyzer_url=https://sentianalyzer.1z38f6e1jeo8.us-south.codeengine.appdomain.cloud/
+sentiment_analyzer_url=https://sentianalyzer.1z8zh6p2543s.us-south.codeengine.appdomain.cloud/
